axion-telemetry-query-service/Manifest/telemetryservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: telemetry-service-pod
spec:
  selector:
    app: telemetry-pod
  ports:
  - port: 80
    targetPort: 8000
  type :  ClusterIP
