axion-telemetry-query-service/Manifest/telemetry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telemetry-ingress
  annotations:
    appgw.ingress.kubernetes.io/health-probe-path: /docs
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: telemetry.sudsutar.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: telemetry-service-pod
                port:
                  number: 8000
